feat(transactions): improve daily tracker ux
